--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <img src="IMG_1666.JPG"/>
+  <div style="text-align:center;width:100%;">
+    <img src="IMG_1666.JPG"/>
+  </div>
 </body>
 </html>
