--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div style="text-align:center;width:100%;">
+  <div class="main-image">
     <img src="IMG_1666.JPG"/>
   </div>
 </body>
