구글 캘린더 추가

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="main-image">
-    <img src="IMG_1666.JPG"/>
+  <div class="main">
+    <div class="main-image">
+      <img src="IMG_1666.JPG"/>
+    </div>
+    <iframe src="https://calendar.google.com/calendar/embed?src=037jph65s9pnm9gf7huft14ds0%40group.calendar.google.com&ctz=Asia%2FSeoul" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
   </div>
 </body>
 </html>
